--- a/Blazor/EmployeeManagement.Api/appsettings.json
+++ b/Blazor/EmployeeManagement.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DBConnection": "Server=.;Database=Employee;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }, 
   "Logging": {
     "LogLevel": {
       "Default": "Information",
