Added Razor class library and reusable blazor components

--- a/Blazor/EmployeeManagement.Web/EmployeeManagement.Web.csproj
+++ b/Blazor/EmployeeManagement.Web/EmployeeManagement.Web.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EmployeeManagement.Models\EmployeeManagement.Models.csproj" />
+    <ProjectReference Include="..\MunchinTech.Components\MunchinTech.Components.csproj" />
   </ItemGroup>
 
 </Project>
